add 見積・申込 button

--- a/index.html
+++ b/index.html
@@ -423,11 +423,14 @@
               <a href="https://lcbform.nikkei.com/OF-versant-trial.html" target="_blank"  class="o-btn__square">トライアル</a>
             </li>
             <li>
+              <a href="https://lcbform.nikkei.com/AF-versant-mitsumori.html" target="_blank" class="o-btn__square">見積・申込</a>
+            </li>
+            <li>
               <a href="https://lcbform.nikkei.com/IQ-versant.html" target="_blank"  class="o-btn__square">お問い合わせ</a>
             </li>
            </ul>
+          
         </section>
-
         <section class="p-index__news">
           <h5 class="p-index__news_ttl">お知らせ</h5>
           <div>
