--- a/price/index.html
+++ b/price/index.html
@@ -514,7 +514,9 @@
           </div>
       
           <a href="https://school.nikkei.co.jp/feature/hr/contents/knowhow/33" target="_blank"
-            class="o-btn__square is__black mt100">今すぐ資料ダウンロード</a>
+            class="o-btn__square is__black">今すぐ資料ダウンロード</a>
+          <a href="https://lcbform.nikkei.com/AF-versant-mitsumori.html" target="_blank"
+            class="o-btn__square is__black mt100">見積・申込</a>
       
           <div class="p-index__lineup_case_wrp">
             <h3 class="p-index__lineup_case_head">導入事例</h3>
