remove column's content from the page

--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -112,7 +112,7 @@
     <main class="p-casestudy">
       <div class="l-page-head l-bg__gray is__page-head-bg">
         <div class="l-inner">
-          <h1 class="l-page-head__name">導入事例/コラム</h1>
+          <h1 class="l-page-head__name">導入事例</h1>
           <h2 class="l-page-head__ttl">国内約500の企業・<br class="sp_only">教育機関が<br>Versantを導入</h2>
         </div>
       </div>
@@ -321,43 +321,6 @@
           </div>
         </div>
       </div>
-      <div class="l-bg__gray">
-        <div class="l-inner">
-          <section class="p-index__column">
-            <h4 class="o-headline is__medium">Special Column</h4>
-            <div class="p-index__column_box">
-              <a href="../column/01/index.html" class="p-index__column_link">
-                <img src="../assets/img/index/column_01.jpg" alt="コラムサムネイル">
-                <div class="p-index__column_link_info">
-                  <h5 class="column_head">経営課題は国際基準の英語力。対応急げ</h5>
-                  <p class="column_date">2024/03/03</p>
-                </div>
-              </a>
-              <a href="../column/02/index.html" class="p-index__column_link">
-                <img src="../assets/img/index/column_02.jpg" alt="コラムサムネイル">
-                <div class="p-index__column_link_info">
-                  <h5 class="column_head">社員の英語スピーキング力をVersantで可視化しませんか</h5>
-                  <p class="column_date">2024/09/09</p>
-                </div>
-              </a>
-            </div>
-          </section>
-          <section class="p-index__column">
-            <h4 class="o-headline is__medium_report">Seminar Report</h4>
-            <div class="p-index__column_box">
-              <a href="../column/03/index.html" class="p-index__column_link">
-                <img src="../column/03/20240911-photo/20240911-01.jpg" alt="コラムサムネイル">
-                <div class="p-index__column_link_info">
-                  <h5 class="report_head">グローバル人材育成の課題とは？<br>人事に求められる取り組みや役割を解説【セミナーレポート】</h5>
-                  <p class="report_date">2024/12/04</p>
-                </div>
-              </a>
-            </div>
-          </section>
-        </div>
-      </div>
-
-
     </main>
 
 
