--- a/casestudy/01/index.html
+++ b/casestudy/01/index.html
@@ -101,6 +101,7 @@
         <li class="l-header__nav-item"><a href="../../feature/index.html" class="l-header__nav-link">機能</a></li>
         <li class="l-header__nav-item"><a href="../../price/index.html" class="l-header__nav-link">価格</a></li>
         <li class="l-header__nav-item"><a href="../../casestudy/index.html" class="l-header__nav-link">事例</a></li>
+        <li class="l-header__nav-item"><a href="../../column/index.html" class="l-header__nav-link">コラム</a></li>
         <li class="l-header__nav-item"><a href="../../faq/index.html" class="l-header__nav-link">FAQ</a></li>
         <li class="l-header__nav-item"><a href="../../library/index.html" class="l-header__nav-link">資料請求</a></li>
       </ul>
