--- a/column/03/index.html
+++ b/column/03/index.html
@@ -70,6 +70,7 @@
                 <a href="../../feature/index.html">機能</a><br>
                 <a href="../../price/index.html">価格</a><br>
                 <a href="../../casestudy/index.html">事例</a><br>
+                <a href="../index.html">コラム</a><br>
                 <a href="../../faq/index.html">FAQ</a><br>
                 <a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求</a><br>
               </nav>
@@ -81,6 +82,7 @@
               <li class="l-header__nav-item"><a href="../../feature/index.html">機能</a></li>
               <li class="l-header__nav-item"><a href="../../price/index.html">価格</a></li>
               <li class="l-header__nav-item"><a href="../../casestudy/index.html">事例</a></li>
+              <li class="l-header__nav-item"><a href="../index.html" class="l-header__nav-link">コラム</a></li>
               <li class="l-header__nav-item"><a href="../../faq/index.html">FAQ</a></li>
               <li class="l-header__nav-item"><a href="https://school.nikkei.co.jp/nn/special/versant/library/index.html">資料請求</a></li>
             </ul>
@@ -93,7 +95,7 @@
           <div class="breadcrumb">
             <a class="breadcrumb-item" href="../../index.html">Versant TOP</a>
             <span>></span>
-            <a class="breadcrumb-item" href="../../casestudy/index.html">導入事例/コラム</a>
+            <a class="breadcrumb-item" href="../index.html">コラム</a>
             <span>></span>
             <a>グローバル人材育成の課題とは？</a>
           </div>
