--- a/index.html
+++ b/index.html
@@ -387,15 +387,15 @@
             <a href="column/01/index.html" class="p-index__column_link">
               <img src="assets/img/index/column_01.jpg" alt="コラムサムネイル">
               <div class="p-index__column_link_info">
-                <h5 class="column_head">経営課題は国際基準の英語力。対応急げ</h5>
-                <p class="column_date">2024/03/03</p>
+                <h5 class="column_head" style="color: white;">経営課題は国際基準の英語力。対応急げ</h5>
+                <p class="column_date" style="color: white;">2024/03/03</p>
               </div>
             </a>
             <a href="column/02/index.html" class="p-index__column_link">
               <img src="assets/img/index/column_02.jpg" alt="コラムサムネイル">
               <div class="p-index__column_link_info">
-                <h5 class="column_head">社員の英語スピーキング力をVersantで可視化しませんか</h5>
-                <p class="column_date">2024/09/09</p>
+                <h5 class="column_head" style="color: white;">社員の英語スピーキング力をVersantで可視化しませんか</h5>
+                <p class="column_date" style="color: white;">2024/09/09</p>
               </div>
             </a>
           </div>
@@ -406,8 +406,8 @@
               <a href="column/03/index.html" class="p-index__column_link">
                 <img src="column/03/20240911-photo/20240911-01.jpg" alt="コラムサムネイル">
                 <div class="p-index__column_link_info">
-                  <h5 class="report_head">グローバル人材育成の課題とは？<br>人事に求められる取り組みや役割を解説【セミナーレポート】</h5>
-                  <p class="report_date">2024/12/04</p>
+                  <h5 class="report_head" style="color: white;">グローバル人材育成の課題とは？<br>人事に求められる取り組みや役割を解説【セミナーレポート】</h5>
+                  <p class="report_date" style="color: white;">2024/12/04</p>
                 </div>
               </a>
             </div>
