column header redesign

--- a/column/index.html
+++ b/column/index.html
@@ -51,7 +51,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>導入事例・コラム｜Versant（ヴァーサント）【法人版】</title>
+  <title>コラム｜Versant（ヴァーサント）【法人版】</title>
   <meta name="description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -113,73 +113,10 @@
     <main class="p-casestudy">
       <div class="l-page-head l-bg__gray is__page-head-bg">
         <div class="l-inner">
-          <h1 class="l-page-head__name">コラム</h1>
-          <h2 class="l-page-head__ttl">国内約500の企業・<br class="sp_only">教育機関が<br>Versantを導入</h2>
+          <h1 class="l-page-head__ttl">コラム</h1>
         </div>
       </div>
-      <div class="p-casestudy__company">
-      <div class="scroll_wrap">
-        <div class="scroll_track">
-          <ul class="scroll_inner">
-            <li class="scroll_cont"><img src="../assets/img/index/logo_01.png" alt="JT"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_03.png" alt="Hilton"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_04.png" alt="ABLIC"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_05.png" alt="PERSOL"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_06.png" alt="HSC CRANES"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_07.png" alt="SMBC 三井住友銀行"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_08.png" alt="三洋化成"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_09.png" alt="DAIKIN"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_10.png" alt="Out-Sourcing"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_11.png" alt="SMBC日興証券"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_12.png" alt="TATA CONSULTANCY SERVICES"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_13.png" alt="KT"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_14.png" alt="BE FORWARD"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_15.png" alt="MUFG 三菱UFJ銀行"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_16.png" alt="ZABBIX"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_17.png" alt="TORIDOLL"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_18.png" alt="TOKIO MARINE NICHIDO 東京上海日動システムズ"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_23.png" alt="abbvie"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_19.png" alt="GLOBIS"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_20.png" alt="TORAIZ"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_21.png" alt="PROGRIT"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_22.png" alt="The Past"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_24.png" alt="DBJ"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_25.png" alt="STUDY HACKER"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_26.png" alt="SHISEIDO"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_27.png" alt="日本触媒"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_28.png" alt="日本酸素ホールディングス"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_01.png" alt="JT"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_03.png" alt="Hilton"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_04.png" alt="ABLIC"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_05.png" alt="PERSOL"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_06.png" alt="HSC CRANES"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_07.png" alt="SMBC 三井住友銀行"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_08.png" alt="三洋化成"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_09.png" alt="DAIKIN"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_10.png" alt="Out-Sourcing"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_11.png" alt="SMBC日興証券"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_12.png" alt="TATA CONSULTANCY SERVICES"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_13.png" alt="KT"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_14.png" alt="BE FORWARD"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_15.png" alt="MUFG 三菱UFJ銀行"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_16.png" alt="ZABBIX"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_17.png" alt="TORIDOLL"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_18.png" alt="TOKIO MARINE NICHIDO 東京上海日動システムズ"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_23.png" alt="abbvie"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_19.png" alt="GLOBIS"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_20.png" alt="TORAIZ"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_21.png" alt="PROGRIT"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_22.png" alt="The Past"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_24.png" alt="DBJ"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_25.png" alt="STUDY HACKER"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_26.png" alt="SHISEIDO"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_27.png" alt="日本触媒"></li>
-            <li class="scroll_cont"><img src="../assets/img/index/logo_28.png" alt="日本酸素ホールディングス"></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="l-inner">
+    　<div class="l-inner">
         <section class="p-index__column">
           <h4 class="o-headline is__medium">Special Column</h4>
           <div class="p-index__column_box">
