redesign column header

--- a/column/index.html
+++ b/column/index.html
@@ -111,7 +111,7 @@
 
 
     <main class="p-casestudy">
-      <div class="l-page-head l-bg__gray is__page-head-bg">
+      <div class="l-page-head colum l-bg__gray is__page-head-bg">
         <div class="l-inner">
           <h1 class="l-page-head__ttl">コラム</h1>
         </div>
