name change- kiyaku corp link-footer

--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -51,7 +51,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>導入事例・コラム｜Versant（ヴァーサント）【法人版】</title>
+  <title>導導入事例｜Versant（ヴァーサント）【法人版】</title>
   <meta name="description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -334,7 +334,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">Versant法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">法人向け教育・研修サービス利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
