--- a/feature/index.html
+++ b/feature/index.html
@@ -417,7 +417,7 @@
           <div class="l-footer__info_txt"><span>Mail</span> : <a
               href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
           <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank"
-            class="text_link">Versant法人利用規約</a>
+            class="text_link">法人向け教育・研修サービス利用規約</a>
         </address>
 
         <div class="l-footer__lnk_box">
