--- a/kiyaku_corp.html
+++ b/kiyaku_corp.html
@@ -50,123 +50,187 @@
     <main>
         <div>
            <div class="headline">
-            <h1>VERSANT®法人利用規約</h1>
+            <h1>法人向け教育・研修サービス利用規約</h1>
            </div>
            <div class="content">
-            <h3>第１条（利用規約の目的）</h3>
+            <p>日経ビジネススクール利用規約（個人）は<a class="link-text" href="https://school.nikkei.co.jp/nn/info/tos.html" target="_blank">こちら</a></p>
+            <p>本規約（以下、「本規約」といいます。）は、株式会社日本経済新聞社（以下、「日経」
+              といいます。）が法人向けに提供する教育サービス、研修サービス、又はこれらに付随す
+              るサービス（以下、総称して「本サービス」といいます。）の提供条件や日経と本サービ
+              スを利用する法人（申し込みを行う法人を含め、以下、「お客様」といいます。）との間
+              の権利義務関係を定めています。本サービスのご利用に際しては本規約の全文をお読みい
+              ただいた上で、本規約に同意いただく必要があります</p>
+            <h3>第1条（定義）</h3>
+            <p>本規約において用いる用語の定義は以下に定めるとおりとします。</p>
            <ul class="list">
-            <li>この「VERSANT」法人利用規約（以下、「本規約」といいます。）は、株式会社日本経済新聞社（以下、「日経」といいます。）が提供する英語力測定テスト「VERSANT」（以下、「本商品」といいます。）の利用に関して、日経と本商品の利用を希望する法人（以下、「顧客」といいます。）およびその顧客に属する実際の受験者（以下、「受験者」といいます。）との間の各種の条件を定めるものです。</li>
-            <li>本商品は、日経がピアソン･ジャパン株式会社（以下、「ピアソン」といいます。）から受けている日本国内における法人向け独占販売権に基づいて顧客および受験者に提供するものです。</li>
-            <li>顧客は、本規約の内容を自ら承諾するとともに、受験者に対しても本規約のうち受験者に関する規定内容を周知徹底のうえ遵守させてください。受験者が本規約に違反した場合、当該違反行為から生じた日経の損害については、顧客も連帯して責任を負うものとします。</li>
+            <li>「利用契約」とは、日経とお客様との間で締結する、本サービスに関する利用契約
+              を意味します。</li>
+            <li>「受講者」とは、本サービスの受講資格を有する個人を意味します。本サービスの
+              種類によって「受講者」は「受験者」等適切に読み替えます</li>
+            <li>「利用料」とは、本サービスを利用する対価を意味します。本サービスの種類に
+              よって「利用料」は「受講料」や「利用料」等適切に読み替えます。</li>
+            <li>「キャンセル」とは、利用契約成立後の受講者数の削減及び利用契約の解約（本
+              サービスの利用を取り止めること）を意味します。</li>
+            <li>「キャンセル料」とは、キャンセル時にお客様が日経に対して支払う費用を意味し
+              ます。</li>
+            <li>「知的財産権」とは、著作権、特許権、実用新案権、意匠権、商標権その他の知的
+              財産権（それらの権利を取得し、又はそれらの権利につき登録等を出願する権利を
+              含みます。）を意味します</li>
+            <li>「本システム」とは、本サービスをお客様に提供するための一切のシステム、ソフ
+              トウェア、プログラムを意味します。</li>
+            <li>「個人情報保護法」とは、個人情報の保護に関する法律（平成15 年法律第57 号）
+              を意味します。</li>
+            <li>「個人情報」とは、日経がお客様から取得する、個人情報保護法第 2 条第1 項に定
+              める個人情報を意味します。</li>
+            <li>「契約担当者」とは、利用契約の締結を担当するお客様の社員などを意味します。</li>
            </ul>
-           <h3>第２条（本商品の範囲・利用条件）</h3>
+           <h3>第2条（適用）</h3>
            <ul class="list">
-            <li>顧客は、本規約に従って本商品を利用する契約（以下、「受験契約」といいます。）の締結、および受験料金の支払いを行い、受験者は本規約に従って本商品を利用してください。</li>
-            <li>本商品は、受験者が英語にて口頭でマイクに入力する音声を、コンピュータを用いた音声認識および自動採点のシステムにより常に一定の客観的評価基準で採点する英語力測定テストですが、受験者の本人確認やテスト中の監督を実施せずに行うオンラインテストである点は予めご承知おきください。また、本商品が特定の目的に適合することの保証はいたしかねます。</li>
-            <li>本商品は、満１６歳以上の受験者を対象とします。</li>
+            <li>本サービスの利用に関して、本規約のほか、日経がお客様に通知又はウェブサイト上
+              で公表する注意事項・禁止事項（以下、「注意事項等」といいます。）が適用されま
+              す。</li>
+            <li>本サービスのうち、「Versant」の名称で提供するサービスについては、本規約本文
+              に加えて「別紙2 Versant の利用に関する規定」が適用されます。また、本サービス
+              のうち、デジタル認証バッジ「Credly」が発行されるサービスについては、本規約本
+              文に加えて「別紙3 Credly に関する規定」が適用されます。</li>
+            <li>お客様は、受講者に対して本規約の内容を遵守させるものとします。</li>
+            <li>本サービスのうち、お客様が利用する特定のサービスの利用料、支払方法、その他の
+              条件は、第3 条（本サービスの申し込み）の申込書で定めます。本規約と申込書の内
+              容に齟齬がある場合には、申込書の内容が本規約に優先的に適用されます。</li>
            </ul>
-           <h3>第３条（本商品の申し込みと受験契約の成立）</h3>
+           <h3>第3条（本サービスの申し込み）</h3>
            <ul class="list">
-            <li>顧客は、本規約に同意のうえ、日経が別途定める注文書を用いて本商品の利用を申し込んでください。ただし、日経が顧客に対して別の申し込み方法を指定した場合は、その方法に従ってください。日経は、顧客から申し込みを受けた場合は、顧客および受験者が本規約にご同意されたものとみなします。</li>
-            <li>日経が前項の注文を承諾した時点で、本規約を契約の内容とする受験契約が成立します。</li>
-            <li>日経は、顧客が次の各号に該当するかまたは該当するおそれがあると合理的に判断した場合、事前の通知なく受験契約を解除することができるものとします。</li>
-            <ul class="list-b">
-                <li class="list-content">注文書の内容が不正確または不十分である場合</li>
-                <li class="list-content">顧客に支払能力がないと日経が判断する場合</li>
-                <li class="list-content">顧客が過去に日経に対して債務不履行または履行遅滞をした場合</li>
-                <li class="list-content">過去に顧客または受験者が、本規約が禁止する事項に違反する行為をしたことがある場合</li>
-                <li class="list-content">顧客もしくは受験者が本商品と同様の事業内容を業とする者である場合、またはそのような第三者への本商品の情報提供を目的として受験契約を締結したと日経が合理的に判断した場合</li>
-                <li class="list-content">日経から顧客への連絡が取れないかまたは著しく困難な場合</li>
-                <li class="list-content">その他、前各号に準じて、日経が不適当と判断する場合</li>
-            </ul>
+            <li>お客様は、本規約に同意し、日経の定める申込書又はウェブサイト上の申し込み
+              フォーム（以下、「申込書」といいます。）に必要事項を記載し日経に提出する方法
+              により本サービスを申し込むものとします</li>
+            <li>日経は、日経の基準に従い、本サービスの申し込みを承諾するか否かを判断します。
+              日経から申し込みを承諾する旨通知された時点で日経とお客様との利用契約が成立す
+              るものとします</li>
+            <li>日経が申し込みを承諾しなかった場合の判断理由については一切お客様に開示しませ
+              ん。また、お客様は当該判断の結果に対して異議を述べることはできません。</li>
            </ul>
-           <h3>第４条（受験料金の支払い）</h3>
-           <p>顧客は、受験契約が成立した日の翌月末日までに、日経が別途指定する金融機関口座に、当該受験契約にかかる受験料金の全額を口座振込みしてください。なお、当該口座振込みにかかる振込手数料は、顧客にてご負担ください。</p>
-           <h3>第５条（受験契約の解除について）</h3>
-           <p>顧客は、日経の債務不履行による場合を除き、成立した受験契約の全部または一部を解除することはできません。</p>
-           <h3>第６条（運用）</h3>
+           <h3>第4条（本サービスの中止）</h3>
            <ul class="list">
-            <li>顧客は、初めて注文書を提出する際に、管理アカウントの登録依頼書を併せて提出してください。顧客は、管理アカウントにて、本商品のテストIDを管理し、受験者へのテストIDの配付および受験結果の管理をしてください。</li>
-            <li>受験期限は、テストID発行日（当日を含む。）から最大12ヶ月後です。</li>
-            <li>本商品を利用するために必要な環境および受験推奨環境は、<a class="link-text" href="https://www.versant.jp/take_a_test.html" target="_blank">本商品の公式サイト</a>に掲載します。顧客および受験者は、本商品を利用するにあたって必要となる情報機器、通信機器、ソフトウェア等の一切を、自らの責任と費用負担においてご準備の上、受験者は当該環境を満たした状態で受験してください。</li>
-            <li>本商品のシステムに不具合もしくは障害が発生した場合、または日経もしくはピアソンが本商品のシステムを停止させた場合は、テストの進行または完了が妨げられたときに限り、日経は顧客または受験者からのお申し出により、当該テストにつき再受験用のテストIDを発行いたします。他の事由（通信状態、受験機器および周囲の環境を含む利用環境ならびに誤操作等を含む。）は全て受験者の責任となり、再受験用のテストIDは発行いたしかねますので、予めご了承ください。</li>
+            <li>戦争内乱、大規模な災害、悪天候、新型インフルエンザ等の疫病、大規模停電・通信
+              障害、システム障害その他の事由により、本サービスの実施が困難と日経が合理的に
+              判断した場合、日経は本サービスの全部又は一部を中止することができるものとしま
+              す。</li>
+            <li>前項に基づき本サービスを中止する場合、日経はお客様に対して日経が定める方法で
+              速やかに通知するものとします。</li>
+            <li>第1 項に基づき本サービスを中止した場合、日経は、代替サービスの提供又は利用料
+              の返金のいずれかを行うものとします。お客様は、日経が決定したいずれかの方法に
+              ついて異議を申し立てることはできません。</li>
            </ul>
-           <h3>第７条（知的財産権）</h3>
-           <p>本商品のソフトウェア、コンテンツ、商標、ロゴマークおよびマニュアル等（以下、「コンテンツ等」といいます。）に関する著作権その他一切の知的財産権は、ピアソンまたは他の権利者に帰属しています。顧客および受験者は、許可なくコンテンツ等につき第三者への開示、再利用、複製（録音を含む。）、蓄積、頒布、売却、譲渡、貸与、翻案、改変等を行わないでください。</p>
-           <h3>第８条（禁止事項）</h3>
+           <h3>第5条（再委託）</h3>
+           <p>お客様は、日経が本サービス提供のため業務の一部又は全部を第三者（以下、「再委託
+            先」といいます。）に再委託する場合があることを予め承諾するものとします。日経は再
+            委託先を適切に管理・監督します。</p>
+           <h3>第6条（知的財産権）</h3>
+           <p>本サービスに関連してお客様に提供されるすべての構成物（テキスト、講義資料、問題、
+            解説、マニュアル等のドキュメント又は本システムを含みますがこれらに限られませ
+            ん。）に関する一切の知的財産権は、日経又は正当な権利を有する第三者に帰属します。</p>
+           <h3>第7条（禁止事項）</h3>
+           <p>お客様は、本サービスの受講に関して以下の行為を行わないものとします。</p>
            <ul class="list">
-            <li>顧客および受験者は、本商品を利用するにあたり、次の各号に該当する行為をしないでください。</li>
-            <ul class="list-b">
-                <li>テスト（解答を含む。）を録音する行為</li>
-                <li>本商品の正常な運営を妨げる行為（コンピューターウイルスを含むプログラムおよびその他の有害なプログラムを使用する行為を含む。）</li>
-                <li>他の受験者または第三者に危害を及ぼす行為</li>
-                <li>他の顧客に属する本商品利用者の地位を利用して本商品を利用する行為</li>
-                <li>日経の許可なく本商品に関する営業活動を行う行為</li>
-                <li>その他、本規約に禁止の定めのある行為または本規約上の契約解除原因に該当する行為</li>
-                <li>その他前各号に準じて日経が不適当と判断する行為</li>
-            </ul>
-            <li>前項の規定に反する行為があった場合、日経は顧客および受験者への本商品の全部または一部の利用を停止することがあります。また、顧客または受験者による前項の規定に反する行為により顧客または受験者が第三者からの損害賠償、名誉毀損その他の訴えを受けた場合には、全て顧客または当該受験者が自らの責任と費用において解決してください。</li>
+            <li>法令、本規約、注意事項等に違反する行為</li>
+            <li>受講者にログインアカウントやID 等（以下、「ログインアカウント等」といいま
+              す。）が付与される場合、これらログインアカウント等の使い回しや、第三者と共
+              有する行為
+            </li>
+            <li>日経又は第三者の知的財産権その他の権利を侵害し、又は侵害するおそれのある行為</li>
+            <li>本システムの全部又は一部を複製、変更、翻案等する行為</li>
+            <li>本システムの解析、リバースエンジニアリングその他ソースコードを入手しようとする行為</li>
+            <li>虚偽、不完全、不正確な情報を日経に届け出る行為</li>
+            <li>本サービスの運営を妨害する行為</li>
+            <li>日経の信用を毀損もしくは日経の財産を侵害する行為又は他者もしくは日経に不利益を与える行為</li>
+            <li>その他、日経が不適当と判断する行為</li>
            </ul>
-           <h3>第９条（お問い合わせ）</h3>
+           <h3>第8条（秘密保持）</h3>
+           <p>日経及びお客様は、本サービス及び利用契約に関して知り得た、相手方が秘密である旨文
+            書で指定した情報を、利用契約履行の目的以外に使用せず、また、その方法を問わず第三
+            者に開示・漏えいしてはならないものとします。</p>
+           <h3>第9条（個人情報）</h3>
+           <p>日経は、日経が取得する契約担当者及び受講者の個人情報（以下、あわせて「個人情報」
+            といいます。）を「別紙1 個人情報の取り扱い」に従い利用します。</p>
+           <h3>第10条（反社会的勢力の排除）</h3>  
            <ul class="list">
-            <li>本商品の受験方法やスコア等、本商品の利用に関する顧客および受験者からのお問い合わせは、ピアソンが対応しますので、ピアソンのCustomer Support までお願いします。</li>
-            <li>本商品に関する前項以外のお問い合わせは、全て本商品の公式サイトに設置している「Versantお問い合わせフォーム」からお願いします。</li>
-           </ul>
-           <h3>第１０条（個人情報）</h3>  
-           <ul class="list">
-            <li>日経は、本商品の申し込みおよび本商品上において登録された顧客の個人情報について、「<a class="link-text" href="https://www.nikkei.co.jp/nikkeiinfo/privacy/about.html" target="_blank">日本経済新聞社の個人情報取り扱いについての考え方</a>」に従って細心の注意をもって管理し、本商品の円滑な提供のために利用します。</li>
-            <li>日経は、本商品につきお問い合わせいただいた場合には、その回答に必要な範囲内で、顧客および当該お問い合わせに関連する受験者の個人情報をピアソンに提供しますので、顧客および受験者は予めご了承ください。また、ピアソンはその回答に必要な範囲内で、当該個人情報をPearson plc およびその子会社であるNCS Pearson Incに提供する場合がありますので、併せて予めご了承ください。日経が顧客からお問い合わせを受けた場合には、受験者がこれらに同意しているものとみなします。</li>
-            <li>顧客および受験者は、日経が個人情報をその本人が特定できないかたちで統計的に処理し、公開する場合があることを、予めご了承ください。</li>
-            <li>受験者の個人情報の取扱いは、前二項に加えて次の各号のとおりです。本商品の申し込みにあたっては、顧客は受験者に次の各号につき予め説明してください。日経が顧客から本商品の申し込みを受けた場合には、受験者が次の各号に同意しているものとみなします。</li>
-            <ul class="list-b">
-                <li>ピアソン、Pearson plcおよびNCS Pearson Incは、顧客および受験者に本商品を提供するために必要な範囲内で受験者の個人情報を取得、閲覧、削除する権限があります。</li>
-                <li>顧客には、受験者の当該個人情報を閲覧する権限が付与されます。</li>
-            </ul>
+            <li>日経及びお客様は、現在、暴力団、暴力団員、暴力団でなくなった時から5 年を経過
+              しない者、暴力団準構成員、暴力団関係企業、総会屋等、社会運動等標ぼうゴロ又は
+              特殊知能暴力集団等、その他これに準ずる者（以下、あわせて「反社会的勢力」とい
+              います。）に該当しないことを表明し、かつ将来に亘っても該当しないことを確約します。</li>
+            <li>日経及びお客様は、自ら又は第三者を利用して、暴力的な要求行為、法的責任を超え
+              た不当要求行為、取引に関して脅迫的な言動や暴力を用いる行為、風説、偽計又は威
+              力を用いて日経の信用を棄損し又は日経の業務を妨害する行為、反社会的勢力の活動
+              を助長し又はその運営に資する行為、反社会的勢力への利益供与等その他これらに準
+              ずる行為を行わないことを確約します。</li>
+            <li>日経及びお客様は、相手方が前各項に違反した場合には、何ら催告なくして利用契約
+              を直ちに解除することができるものとします。なお、この場合において、解除した当
+              事者は、何らの損害賠償、補償その他の支払義務も負わないものとします。</li>
            </ul>
            <h3>第１１条（業務委託）</h3>
-           <p>日経は、必要に応じて本商品に関する業務の全部または一部を、その費用と責任において第三者に委託することがあります。このうち、個人情報を取り扱う業務を第三者に委託する場合には、日経は、当該個人情報の取り扱いにつき日経が負っている義務と同等の義務を当該第三者に課すとともに、当該第三者につき必要な監督を行います。</p>
-           <h3>第１２条（本商品の変更・提供中止）</h3>
            <ul class="list">
-            <li>日経は、本商品に関わる事項を変更する場合、予め顧客に通知します。</li>
-            <li>前項に基づき、締結済みの受験契約の受験期限または仕様を顧客に不利に変更した場合、日経は、顧客の請求に基づき、当該受験契約に基づき発行したテストIDを、変更前の受験期限または仕様に準じる新しいテストIDへと交換します。</li>
-            <li>日経またはピアソンが本商品の提供を中止することとなった場合には、日経は３箇月前までに顧客に通知することにより、受験契約を終了させることができるものとします。</li>
-            <li>前項により受験契約が契約期限前に終了する場合は、顧客の請求に基づき、お支払いいただいた受験料金から、受験契約終了前までに利用されたテストID分の受験料金を差し引いた残額を全額返金します。この返金をする場合、日経は、顧客が指定する金融機関口座への口座振込みにより返金し、当該口座振込みにかかる振込手数料は日経が負担します。</li>
-            <li>第１項に基づく変更または第３項に基づく受験契約の終了により、顧客または受験者に直接または間接の不利益または損害が生じたとしても、日経は第２項または前項以外の責任を負いかねますので、予めご了承ください。</li>
+            <li>日経は、お客様が次の各号のいずれかに該当した場合、お客様への事前の通知又は催
+              告を要することなく利用契約を解除することができます。</li>
+              <ul class="list-b">
+                <li>本規約に違反した場合</li>
+                <li>利用料などの支払債務の履行を遅滞し又は支払を拒否した場合</li>
+                <li>お客様が破産手続開始、民事再生手続開始、会社更生手続開始等の申立てを受け
+                  もしくは申立てをした場合、お客様について清算手続が開始された場合、お客様
+                  について仮差押え、差押えもしくは競売の申請があった場合、お客様が租税公課
+                  を滞納して保全差押えを受けた場合又はお客様が不渡手形を出した場合、その他
+                  これらに準ずる場合</li>
+                <li>その他、合理的な理由により本サービスの利用者として不適切と日経が判断した場合</li>
+              </ul>
+            <li>日経は、前項に基づく利用契約の解除に関する質問・苦情は一切受け付けません。</li>
+            <li>お客様が本条第1 項各号のいずれかに該当した場合、お客様は日経に対する一切の債
+              務につき期限の利益を喪失し直ちに全債務を一括して履行するものとします。</li>
+            <li>お客様が第7 条（禁止事項）に違反し、又は本条第1 項各号のいずれかに該当するこ
+              とにより日経が損害を被った場合、利用契約の解除の有無にかかわらずお客様は当該
+              損害を賠償するものとします。</li>
+            <li>日経が本条に基づき利用契約を解除したことによりお客様に損害が発生したとしても、
+              日経は一切責任を負いません。</li>
            </ul>
-           <h3>第１３条（免責と損害賠償）</h3>
+           <h3>第12条（譲渡禁止）</h3>
+           <p>お客様は、日経の事前の書面による承諾なく、利用契約に基づく権利、義務の全部又は一
+            部を第三者に譲渡し、引き受けさせ、又は担保に供してはならないものとします。</p>
+           <h3>第13条（非保証）</h3>
            <ul class="list">
-            <li>天変地異、戦争、内乱、サイバーテロ、労働争議、火災、停電、法令による強権発動等、合理的に自らの責に帰することができない事由を直接の原因として、本規約上の義務に不履行もしくは遅滞または受験者が本商品利用のために使用した機器に損害等が生じても、日経はこれらに対する責任は負いかねます。</li>
-            <li>顧客または受験者が本商品を利用することにより、顧客または受験者に直接または間接の不利益または損害が生じたとしても、当該不利益または損害の発生につき日経に故意または重大な過失がある場合を除いて、日経はその責任を負いかねます。</li>
-            <li>前項に基づき日経が責任を負う場合、日経は当該責任に基づく損害賠償請求の原因となった個別の本商品に対して顧客が支払った受験料金を上限としてその損害を賠償します。</li>
+            <li>日経は、本サービスがお客様の特定の利用目的に合致していることや、特定の結果の
+              実現を保証するものではありません。</li>
+            <li>本サービスは日経がお客様に対して本サービスを提供する時点において日経にとって
+              提供可能な内容で提供されるものとし、本サービスについて瑕疵や不具合がないこと
+              を日経が明示的にも黙示的にも保証するものではありません。</li>
            </ul>
-           <h3>第１４条　（反社会的勢力の排除）</h3>
+           <h3>第14条（免責及び損害賠償の制限）</h3>
            <ul class="list">
-            <li>顧客および顧客の役員は、自己または自己の関係会社ならびにこれらの役員、使用人が次の各号のいずれにも該当しないことを表明し、かつ将来にわたっても該当しないことを確約します。</li>
-            <ul class="list-b">
-                <li>暴力団、暴力団員、暴力団員でなくなったときから５年を経過しない者、暴力団準構成員、暴力団関係企業、総会屋等、社会運動等標ぼうゴロまたは特殊知能暴力集団等、その他これらに準じる者（以下、「反社会的勢力」といいます。）であること</li>
-                <li>反社会的勢力が経営を支配しまたは実質的に関与していると認められる関係を有すること</li>
-                <li>自社もしくは第三者の不正の利益を図る目的または第三者に損害を加える目的をもってする等、不当に反社会的勢力を利用していると認められる関係を有すること</li>
-                <li>反社会的勢力に対して資金等を提供し、または便宜を供与する等の関与をしていると認められる関係を有すること</li>
-                <li>役員または経営に実質的に関与している者が暴力団員等と社会的に非難されるべき関係を有すること</li>
-            </ul>
-            <li>日経は、顧客および顧客の役員が次のいずれかに該当した場合には、何らの催告を要せずして契約を解除することができます。</li>
-            <ul class="list-b">
-                <li>前項の表明の内容が事実に反していたことが判明したとき</li>
-                <li>前項の確約に反して、同項各号のいずれかに該当したとき</li>
-            </ul>
-            <li>前項の規定による契約解除よって顧客または受験者に損害が生じても、日経は当該損害につきいかなる賠償も致しかねます。</li>
+            <li>本サービスに関する日経の責任は、善良なる管理者の注意をもってお客様に対して本
+              サービスを提供することに限られ、日経は、日経に故意又は重大な過失がある場合を
+              除き、債務不履行、契約不適合、不法行為、不当利得その他請求原因のいかんを問わ
+              ずいかなる責任も負わず、また、損害賠償義務も一切負いません。</li>
+            <li>前項に基づいて日経が負う賠償責任の範囲は、お客様が直接かつ現実に被った通常の
+              損害とし、逸失利益、機会損失等の間接的又は派生的な損害はこれに含まれません。
+              日経が負う賠償責任は利用料を上限とします。</li>
            </ul>
-           <h3>第１５条（本規約の変更）</h3>
-           <p>日経は、必要に応じて随時本規約を変更することがあります。その場合、変更後の内容および効力発生時期を本商品の公式サイトに掲載することにより周知します。当該効力発生時期以降は、変更後の本規約が適用されます。</p>
-           <h3>第１６条（協議解決）</h3>
-           <p>本規約に定めのない事項または各条項の解釈について疑義を生じた場合については、顧客、受験者および日経は、そのつど誠意をもって協議し、円満に解決を図るよう努めます。</p>
-           <h3>第１７条（準拠法・管轄合意裁判所）</h3>
+           <h3>第15条（本規約の変更）</h3>
            <ul class="list">
-            <li>本規約は日本法に準拠します。</li>
-            <li>顧客、受験者および日経は、本規約または本規約に基づく契約に関し紛争が生じた場合、東京地方裁判所を第一審の専属的合意管轄裁判所とします。</li>
+            <li>日経は、 お客様の一般の利益に適合する場合のほか、 本規約の変更が利用契約の①②
+              目的に反せず、かつ、変更の必要性、変更内容の相当性など諸般の事情に照らして合
+              理的なものである場合には、お客様の承諾を得ることなく、本規約の内容を変更し利
+              用契約の内容を変更することができます。</li>
+            <li>日経は、本規約を変更する場合、お客様に対して日経が定める方法により変更後の内
+              容及び効力発生日を周知します。</li>
            </ul>
+           <h3>第16条（準拠法・管轄）</h3>
+           <ul class="list">
+            <li>本規約及び利用契約の準拠法は日本法とします。</li>
+            <li>本規約又は利用契約に起因し、又は関連する一切の紛争については、東京地方裁判所
+              を第一審の専属的合意管轄裁判所とします。</li>
+           </ul>
+      
+           <p class="date">（2023 年11 月15 日制定）</p>
+           <p class="date">（2024 年9 月5 日改定）</p>
+           <p class="date">（2025 年4 月1 日改定）</p>
            <p class="above">以　上</p>
-           <p class="date">2018年4月1日制定</p>
            </div>
            <div class="partners">
             <img class="partner-img" src="assets/img/index/partnership_logo.svg" alt="versant partner">
@@ -185,7 +249,7 @@
                 <p class="footer-head">お問合せ窓口</p>
                 <div class="l-footer__info_txt"><span class="text-s">Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793 (平日10:00〜17:00)</a> </div>
                 <div class="l-footer__info_txt"><span class="text-s">Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-                <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+                <a href="./kiyaku_corp.html" target="_blank" class="text_link">法人向け教育・研修サービス利用規約</a>
           </div>  
           </div>   
           <div class="link-box">
