--- a/feature/index.html
+++ b/feature/index.html
@@ -449,7 +449,7 @@
             <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/nikkeiinfo/" target="_blank">会社情報・お知らせ</a>
             </li>
             <li class="l-footer__lnk_lst"><a href="http://reprint.nikkei.co.jp/" target="_blank">記事利用</a></li>
-            <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/privacy/" target="_blank">個人情報の取り扱い</a></li>
+            <li class="l-footer__lnk_lst"><a href="https://www.nikkei.com/lounge/privacy/privacy.html" target="_blank">プライバシーポリシー</a></li>
             <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/saiyo/" target="_blank">本社採用案内</a></li>
             <li class="l-footer__lnk_lst"><a href="http://www.nikkei.co.jp/nikkeiinfo/corporate/group/"
                 target="_blank">日経グループ情報</a></li>
