--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -179,8 +179,40 @@
         </div>
       </div>
     </div>
+    <div class="sorting">
+      <div class="sorting_a">
+        <div class="sorting_txt_a">
+          <p class="sorting_title"><a href="#jumpto">法人企業</a></p>
+          <a href="#jumpto"><img class="sorting_arrow" src="../assets/img/casestudy/symbols/circle-chevron-down-solid.svg" alt="arrow"></a>
+        </div>
+        <div class="sorting_btn">
+          <p class="sort_txt">グローバル人材育成</p>
+          <p class="sort_txt">採用</p>
+          <p class="sort_txt">モチベーション向上</p>
+          <p class="sort_txt">昇進・昇格要件</p>
+          <p class="sort_txt">新卒研修</p>
+          <p class="sort_txt">人材ポートフォリオの把握</p>
+          <p class="sort_txt">研修の効果測定</p>
+        </div>
+      </div>
+      <div class="sorting_b">
+        <div class="sorting_txt_b">
+          <p class="sorting_title"><a href="#jumptob">英語教育機関</a></p>
+          <a href="#jumptob"><img class="sorting_arrow" src="../assets/img/casestudy/symbols/circle-chevron-down-solid.svg" alt="arrow"></a>
+        </div>
+        <div class="sorting_btn">
+          <p class="sort_txt">学習の効果測定・進捗確認</p>
+          <p class="sort_txt">データ分析</p>
+          <p class="sort_txt">学習継続率の向上</p>
+          <p class="sort_txt">カリキュラム構築</p>
+          <p class="sort_txt">留学前アセスメント</p>
+          <p class="sort_txt">モチベーション向上</p>
+        </div>
+      </div>
+    </div>
       <div class="p-casestudy__example">
         <div class="l-inner">
+          <h2 class="case_title" id="jumpto">法人企業</h2>
           <div class="p-casestudy__post-wrap">
             <a href="./10/index.html" class="p-casestudy__post">
               <img src="../assets/img/casestudy/post-thumb-10.jpg" alt="構造計画研究所 サムネイル" class="p-casestudy__post-thumb">
@@ -276,6 +308,7 @@
               </div>
             </a>
           </div>
+          <h2 class="case_title" id="jumptob">英語教育機関</h2>
           <div class="p-casestudy__post-wrap">
 
             <a href="./07/index.html" class="p-casestudy__post">
