--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -64,7 +64,7 @@
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/index.html">
   <meta property="og:description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="導入事例・コラム｜Versant（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
