--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -51,7 +51,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>導導入事例｜Versant（ヴァーサント）【法人版】</title>
+  <title>導入事例｜Versant（ヴァーサント）【法人版】</title>
   <meta name="description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -60,7 +60,7 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="導導入事例｜Versant（ヴァーサント）【法人版】">
+  <meta property="og:title" content="導入事例｜Versant（ヴァーサント）【法人版】">
   <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/casestudy/index.html">
   <meta property="og:description" content="定量的な指標で採用・昇進・海外派遣の基準にご利用いただける世界標準の英語テスト、Versant（ヴァーサント）は、数多くの法人企業様のグローバル人材育成をご支援しております。語学力の新基準として人材育成を推進しておられる企業様の先進的な取り組みをご紹介します。">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
