--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
           <h5 class="p-index__news_ttl">お知らせ</h5>
           <div>
             <p><a href="https://www.versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20240115.pdf?20240326" target="_blank" class="text_link">新テスト「Versant Speaking ＆Listening Test」内容を刷新！無料トライアル受験、受付中！</a></p>
-            <p><a href="https://versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20241001.pdf" target="_blank" class="text_link">Versant English Speaking Test販売終了のお知らせ</a></p>
+            <p><a href="https://versant.jp/_common/_js/pdfjs/web/viewer.html?file=/pdf/info20241001.pdf" target="_blank" class="text_link">Versant English Speaking Test サービス終了のお知らせ</a></p>
           </div>
         </section>
       </div>
