--- a/casestudy/07/index.html
+++ b/casestudy/07/index.html
@@ -321,7 +321,7 @@
           <p class="l-footer__info_head">お問合せ窓口</p>
           <div class="l-footer__info_txt"><span>Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793</a> (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/info/tos-hr.html" target="_blank" class="text_link">法人向け教育・研修サービス利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/info/tos-hr.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
       </address>  
       
       <div class="l-footer__lnk_box">
