--- a/column/03/index.html
+++ b/column/03/index.html
@@ -265,7 +265,7 @@
                 <p class="footer-head">お問合せ窓口</p>
                 <div class="l-footer__info_txt"><span class="text-s">Tel</span> : <a href="tel:+03-6256-2793">03-6256-2793 (平日10:00〜17:00)</a> </div>
                 <div class="l-footer__info_txt"><span class="text-s">Mail</span> : <a href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-                <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank" class="text_link">VERSANT法人利用規約</a>
+                <a href="https://school.nikkei.co.jp/nn/info/tos-hr.html" target="_blank" class="text_link">「法人向け教育・研修サービス利用規約」</a>
           </div>  
           </div>   
           <div class="link-box">
