--- a/faq/index.html
+++ b/faq/index.html
@@ -170,8 +170,8 @@
             (平日10:00〜17:00)</div>
           <div class="l-footer__info_txt"><span>Mail</span> : <a
               href="mailto:versant@nex.nikkei.co.jp">versant@nex.nikkei.co.jp</a></div>
-          <a href="https://school.nikkei.co.jp/nn/special/versant/kiyaku_corp.html" target="_blank"
-            class="text_link">VERSANT法人利用規約</a>
+          <a href="https://school.nikkei.co.jp/nn/info/tos-hr.html" target="_blank"
+            class="text_link">「法人向け教育・研修サービス利用規約」</a>
         </address>
         <div class="l-footer__lnk_box">
           <p class="l-footer__lnk_ttl">このサイトについて</p>
