--- a/column/04/index.html
+++ b/column/04/index.html
@@ -78,7 +78,47 @@
     </div>
 
   <article>
-         
+    <div class="profile">
+      <h3 class="title_profile">著者プロフィール</h3>
+      <div class="profile_info">
+        <img class="profile_image" src="../../assets/img/column_04/Mason_profile.jpeg" alt="author">
+        <div class="profile_txts">
+          <p class="profile_name">椿祐輔</p>
+          <p class="profile_title">The Past CEO</p>
+          <p class="profile_text">VERSANT満点(90点)、CEFR C2レベルの英語力を有する。フィリピンの語学学校で10年以上にわたりカリキュラムと教材開発に従事し、述べ5,000人以上の多国籍な英語学習者（日本、中国、台湾、ベトナム、ロシア等）の学習をサポート。言語学と音声学に精通しており、現在は株式会社The Pastの代表取締役、カリキュラム開発者として、グローバルな英語教育を推進している。</p>
+        </div>
+      </div>
+    </div>
+    <div class="column04_body">
+      <h2 class="h2_04">導入(課題想起)</h2>
+      <p>英語のスピーキング力を伸ばしたい。<br>
+        でも、ただ「勉強」するのはしんどい──そう感じていませんか？</p>
+      <p>できるだけラクに、それでも確実に英語が話せるようになりたい。<br>
+        できれば、最初の学習からすぐに効果を感じたい。<br>
+        そんな気持ちに応えるために、この記事ではAIを活用した最新のスピーキング学習法をご紹介します。
+        </p>
+      <p>なかでも「ChatGPT」を使った練習法は、2025年現在、多くの英語学習者にとって最も効率的な選択肢のひとつです。</p>
+      <p>今すぐに効果を実感したい方は、本編の<span>「ChatGPTを使った勉強法［自己紹介編］」</span>までスキップしてみてください。</p>
+      <h2 class="h2_04">スピーキングとは？</h2>
+      <p>スピーキング力を伸ばすには、まず「話す」とはどんな行為なのかを理解することが大切です。</p>
+      <h3 class="h3_04">スピーキングの3つのプロセス</h3>
+      <p>英語を話す際のスピーキングプロセスは、大きく「概念化」「文章化」「音声化」の3ステップに分けられます。それぞれのステップがどのような役割を持つか、確認しましょう。</p>
+      <ul>
+        <li class="">概念化: 伝える内容を考えるプロセス<br>
+          概念化とは、「何を伝えたいか」を明確にするプロセス。日本語であれば無意識に行っていることが、外国語ではあえて意識する必要があります。
+          </li>
+        <li>文章化: 英語の文に組み立てるプロセス<br>
+          文章化とは、概念化したアイデアを実際の英文に落とし込む作業です。ここで必要なのは語彙力や文法力だけでなく、それらを即座に結びつけられるアウトプットの訓練です。
+          </li>
+        <li>音声化: 明瞭な発音・イントネーションで声に出すプロセス<br>
+          音声化は、文章化で作成した文を実際に口に出す段階。ここでは正確な発音、自然なイントネーション・リズムが問われます。
+          </li>
+        <p>この3つのステップを意識しながら学習することで、英語スピーキング力を効率よく伸ばすことが可能です。</p>
+        <h3 class="h3_04">話せない3つの原因と、話せる人の特徴</h3>
+        <p>英語がうまく話せないと感じるとき、その原因は「概念化」「文章化」「音声化」の3つのプロセスのどこかにあります</p>
+        <p>ここでは、それぞれのプロセスで話せない状態と話せる状態の違いを比較しながら見ていきましょう。</p>
+      </ul>
+    </div>
          
   </article>
 
