--- a/column/04/index.html
+++ b/column/04/index.html
@@ -74,7 +74,7 @@
     <div class="column04_title_section">
     <h1 class="column04_title">【2025年度最新版】英語スピーキングをChat GPTで強化！<br>AI時代の最新学習法【プロンプト付き】</h1>
     <p class="column04_date">公開日：○○○○年○○月○○日</p>
-    <img src="" alt="">
+    <img class="head_img" src="../../assets/img/column_04/Illustration_1.png" alt="">
     </div>
 
   <article>
@@ -91,20 +91,22 @@
     </div>
     <div class="column04_body">
       <h2 class="h2_04">導入(課題想起)</h2>
-      <p>英語のスピーキング力を伸ばしたい。<br>
+      <img src="../../assets/img/column_04/Illustration_01.gif" alt="">
+      <p class="p_04">英語のスピーキング力を伸ばしたい。<br>
         でも、ただ「勉強」するのはしんどい──そう感じていませんか？</p>
-      <p>できるだけラクに、それでも確実に英語が話せるようになりたい。<br>
+      <p class="p_04">できるだけラクに、それでも確実に英語が話せるようになりたい。<br>
         できれば、最初の学習からすぐに効果を感じたい。<br>
         そんな気持ちに応えるために、この記事ではAIを活用した最新のスピーキング学習法をご紹介します。
         </p>
-      <p>なかでも「ChatGPT」を使った練習法は、2025年現在、多くの英語学習者にとって最も効率的な選択肢のひとつです。</p>
-      <p>今すぐに効果を実感したい方は、本編の<span>「ChatGPTを使った勉強法［自己紹介編］」</span>までスキップしてみてください。</p>
+      <p class="p_04">なかでも「ChatGPT」を使った練習法は、2025年現在、多くの英語学習者にとって最も効率的な選択肢のひとつです。</p>
+      <p class="p_04">今すぐに効果を実感したい方は、本編の<span>「ChatGPTを使った勉強法［自己紹介編］」</span>までスキップしてみてください。</p>
       <h2 class="h2_04">スピーキングとは？</h2>
-      <p>スピーキング力を伸ばすには、まず「話す」とはどんな行為なのかを理解することが大切です。</p>
+      <img src="../../assets/img/column_04/Illustration_2.png" alt="">
+      <p class="p_04">スピーキング力を伸ばすには、まず「話す」とはどんな行為なのかを理解することが大切です。</p>
       <h3 class="h3_04">スピーキングの3つのプロセス</h3>
-      <p>英語を話す際のスピーキングプロセスは、大きく「概念化」「文章化」「音声化」の3ステップに分けられます。それぞれのステップがどのような役割を持つか、確認しましょう。</p>
-      <ul>
-        <li class="">概念化: 伝える内容を考えるプロセス<br>
+      <p class="p_04">英語を話す際のスピーキングプロセスは、大きく「概念化」「文章化」「音声化」の3ステップに分けられます。それぞれのステップがどのような役割を持つか、確認しましょう。</p>
+      <ul class="numerical">
+        <li>概念化: 伝える内容を考えるプロセス<br>
           概念化とは、「何を伝えたいか」を明確にするプロセス。日本語であれば無意識に行っていることが、外国語ではあえて意識する必要があります。
           </li>
         <li>文章化: 英語の文に組み立てるプロセス<br>
@@ -113,11 +115,264 @@
         <li>音声化: 明瞭な発音・イントネーションで声に出すプロセス<br>
           音声化は、文章化で作成した文を実際に口に出す段階。ここでは正確な発音、自然なイントネーション・リズムが問われます。
           </li>
-        <p>この3つのステップを意識しながら学習することで、英語スピーキング力を効率よく伸ばすことが可能です。</p>
-        <h3 class="h3_04">話せない3つの原因と、話せる人の特徴</h3>
-        <p>英語がうまく話せないと感じるとき、その原因は「概念化」「文章化」「音声化」の3つのプロセスのどこかにあります</p>
-        <p>ここでは、それぞれのプロセスで話せない状態と話せる状態の違いを比較しながら見ていきましょう。</p>
       </ul>
+      <p class="p_04">この3つのステップを意識しながら学習することで、英語スピーキング力を効率よく伸ばすことが可能です。</p>
+      <h3 class="h3_04">話せない3つの原因と、話せる人の特徴</h3>
+      <p class="p_04">英語がうまく話せないと感じるとき、その原因は「概念化」「文章化」「音声化」の3つのプロセスのどこかにあります</p>
+      <p class="p_04">ここでは、それぞれのプロセスで話せない状態と話せる状態の違いを比較しながら見ていきましょう。</p>
+      <p class="txt_title">1. 概念化：伝える内容を考えるプロセス</p>
+      <img src="../../assets/img/column_04/Illustration_3.png" alt="イラスト">
+      <div class="table">
+        <table>
+          <tr>
+            <th class="th_left">話せない状態</th>
+            <th class="th_right">話せる状態</th>
+          </tr>
+          <tr>
+            <td class="td_left">
+              <ul class="dot">
+                <li>日本語で考えるレベルの複雑さをそのまま英語で表現しようとして、頭が混乱してしまう。</li>
+                <li>何を言うべきかが曖昧なまま、話し始めてしまうことも多い。</li>
+              </ul>
+            </td>
+            <td class="td_right">
+              <ul class="dot">
+                <li>抽象的な話を具体化したり、複雑な内容を簡潔に言い換えたりする力がある。</li>
+                <li>話す前に、頭の中で伝えたい要点がシンプルにまとまっている。</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <p class="txt_title">2. 文章化：英語の文に組み立てるプロセス</p>
+      <img src="../../assets/img/column_04/Illustration_4.png" alt="">
+      <div class="table">
+        <table>
+          <tr>
+            <th class="th_left">話せない状態</th>
+            <th class="th_right">話せる状態</th>
+          </tr>
+          <tr>
+            <td class="td_left">
+              <ul class="dot">
+                <li>語彙や文法の知識はあるが、それを使って文章を即座に作ることが難しい。</li>
+                <li>毎回、頭の中で日本語から文を組み立てており、時間がかかっている。</li>
+              </ul>
+            </td>
+            <td class="td_right">
+              <ul class="dot">
+                <li>よく使う「型（フレーズ）」が体に染みついていて、そこに単語を流し込むだけで文が自然に出てくる。</li>
+                <li>例えば「I think 〜」「The reason is that 〜」などの表現を使い回すことで、素早く文章化ができる。</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <p class="txt_title">3. 音声化： 明瞭な発音・イントネーションで声に出すプロセス</p>
+      <img src="../../assets/img/column_04/Illustration_5.png" alt="">
+      <div class="table">
+        <table>
+          <tr>
+            <th class="th_left">話せない状態</th>
+            <th class="th_right">話せる状態</th>
+          </tr>
+          <tr>
+            <td class="td_left">
+              <ul class="dot">
+                <li>口が英語の音やリズムに慣れておらず、知っている内容でもうまく言葉にできない。</li>
+                <li>発音やイントネーションが不自然で、相手に伝わりにくいこともある。</li>
+              </ul>
+            </td>
+            <td class="td_right">
+              <ul class="dot">
+                <li>音読練習を通して、英語のリズム・イントネーションが自然に出せる。</li>
+                <li>「口が勝手に動く」感覚でスムーズに話すことができ、聞き取りやすく伝わる話し方になっている。</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <p class="p_04">なんとなく「話せない」と感じている方も、どこで詰まっているのかを明確にするだけで学習効率は大きく変わります。</p>
+      <p class="p_04">特にビジネスパーソンは、内容が難しくなりすぎてしまう傾向があるので要注意です。<br>
+        まずは自分のスピーキング習慣を振り返ってみてください。</p>
+      <p class="p_04">そして、こうした「話せる力」が実際にどれほど身についているかを知るには、英語テストのVERSANTが役立ちます。</p>
+      <p class="p_04">この試験は、20分で話す力を「聞く・理解する・組み立てる・発話する」という一連の流れで評価し、流暢さ・語彙・文の構成力・発音・リスニングなどを総合的にスコア化します。</p>
+      <p class="p_04">AIによる自動採点により、短時間で精度の高いフィードバックが得られるのも特徴です。学習の成果を可視化し、次のステップを考えるうえで、信頼できる指標となるでしょう。</p>
+      <h2 class="h2_04">Chat GPTを使った勉強法[自己紹介編]</h2>
+      <img src="../../assets/img/column_04/Illustration_6.png" alt="">
+      <p class="p_04">ChatGPTはログインなしでも利用できますが、より良い結果を得たい場合は、無料アカウントを作成してログインしたうえでの利用をおすすめします。</p>
+      <p class="p_04">この記事では、初めての商談において最も重要な“第一印象”を左右する自己紹介を、ChatGPTを活用して効率よく学ぶ方法をご紹介します。</p>
+      <p class="p_04">先ほどご紹介したスピーキングの3ステップに照らし合わせると、「概念化」と「文章化」はAIに任せ、「音声化」に集中して練習するのが効果的です。<br>
+        以下の流れに沿って、相手に好印象を与え、信頼を築く自己紹介をつくっていきましょう。</p>
+      <h3 class="h3_04">1.理想のモデルをインプット</h3>
+      <img src="../../assets/img/column_04/Illustration_07.gif" alt="">
+      <p class="p_04">AIでより良い結果を得たいのであれば、理想的なモデルを学習させ、自分用にカスタマイズさせるのが最も効率的です。</p>
+      <p class="p_04">ChatGPTを開いて、以下のプロンプトをコピペしましょう。</p>
+      <div class="txt_box">
+        <p class="p_box">業種は[〇〇]です。以下のテンプレートに沿った英語の自己紹介文と日本語訳を作成しなさい。</p>
+        <p class="p_box">Hi, I’m [1. ニックネーム] from [2. 会社名].<br>
+          I’m part of the [3. 部署・チーム名] and mainly [4. 担当している業務 or 関わる相手・目的].<br>
+          I’m here today to [5. 訪問・参加の主目的] and [6. サポート・提案の意図].<br>
+          Thanks for having me—I'm looking forward to our [7. 会話や関係性に関する締めの言葉].</p>
+      </div>
+      <p class="txt_mark">※〇〇に業種(製造業/教育など)を入力してご利用ください。</p>
+      <h3 class="h3_04">2.自己紹介文の作成</h3>
+      <p>続いて、以下の「：」の右に日本語で ご自身の情報を入力してください。
+        迷いやすいところは「例：」を参考に入力してみましょう。</p>
+      <div class="txt_box">
+        <p class="p_box">以下の日本語の回答を基に、70語程度の英語の自己紹介文を完成させなさい。</p>
+        <ul class="numerical">
+          <li>ニックネーム：</li>
+          <li>会社名：</li>
+          <li>部署名：</li>
+          <li>業務内容など：<br>例：法人営業、新規顧客対応、社内研修の設計、開発プロジェクトの進行など</li>
+          <li>今回の訪問・参加の主な目的：<br>例：現状の課題をヒアリングするため、新サービスのニーズを確認するため</li>
+          <li>提案や支援の目的・意図<br>例：連携の可能性を探るため、よりよい提案ができるようにするため</li>
+          <li>締めの言葉（楽しみにしていること）：<br>例：お話しできること、意見交換、今後の連携 など</li>  
+        </ul>
+      </div> 
+      <img src="../../assets/img/column_04/2.png" alt="chatgpt"> 
+      <p class="txt_mark"></p>
+      <h3 class="h3_04">3.校正</h3>
+      <img src="../../assets/img/column_04/Illustration_8.png" alt="">
+      <p class="p_04">前のステップで、 理想通りにならなかった文章もここで校正します。</p>
+      <div class="txt_box">
+        <p class="p_04">以下の点に注意し、より自然な英語の自己紹介文(日本語訳つき)となるようステップ・バイ・ステップで校正してください。</p>
+        <ul class="dot">
+          <li>日本語の語句があれば、適切に英語に翻訳してください。</li>
+          <li>より自然で適切な言い回しがあれば修正し、その理由も説明してください。</li>
+        </ul>
+      </div>
+      <img src="../../assets/img/column_04/3.1.png" alt="">
+      <p class="p_04">より適切な表現と、その表現が選ばれた理由を解説してくれます。</p>
+      <img src="../../assets/img/column_04/3.2.png" alt="">
+      <p class="p_04">英日の自己紹介が完成しました。</p>
+      <h3 class="h3_04">4.日本語訳を英語の語順に並び替える</h3>
+      <p class="p_04">美味しい料理に下ごしらえが欠かせないように、英語学習もこのステップでひと手間かけることで、理解の質がグッと上がります。</p>
+      <p class="p_04">英語を日本語に訳すのではなく、英語の語順のまま理解する感覚を養う練習です。</p>
+      <p class="p_04">この作業は「サイトトランスレーション」や「直読直解」と呼ばれ、スピーキングにおける文章化の力を高めるのにも役立ちます。</p>
+      <p class="p_04">回は1分程度の自己紹介なので、中級〜上級の方であればこのステップをスキップしていただいても問題ありません。</p>
+      <div class="txt_box">
+        <p>以下のルールに従って、日本語訳を英語の語順で並べ替え、スラッシュ (/) で各部分を区切ってください</p>
+        <p class="txt_bold">ルール：</p>
+        <ul class="dot">
+          <li>英語の語順を最優先にし、翻訳時には日本語の自然な語順よりも英語の語順を反映させます。</li>
+          <li>各文を一文ごとに分けて、英語の語順に従って意味の塊（チャンク）ごとにスラッシュ (/) で区切ります。</li>
+          <li>英語の語順をそのまま反映し、できるだけ簡潔に、必要な部分だけをチャンクとして分けます</li>
+        </ul>
+        <p class="txt_bold">正解例：</p>
+        <p>英語：I went to the park yesterday.</p>
+        <p>日本語（英語の語順に従って）：私は / 行きました / 公園に / 昨日</p>
+        <p class="top_margin">英語：She is reading a book in the room.</p>
+        <p>日本語（英語の語順に従って）：彼女は / 読んでいます / 本を / 部屋で</p>
+        <p class="txt_bold">誤った例：</p>
+        <p>英語：I went to the park yesterday.</p>
+        <p>日本語：私は昨日公園に行きました。</p>
+        <p class="top_margin">英語：She is reading a book in the room.</p>
+        <p>日本語：彼女は部屋で本を読んでいます。</p>
+      </div>
+      <img src="../../assets/img/column_04/4.png" alt="chatgpt">
+      <p>出てきた日本語が不自然な場合は、 以下のプロンプトで再度校正してみてください。</p>
+      <div class="txt_box">
+        <p>以下の点に注意して、ステップ・バイ・ステップで改善してください。</p>
+        <ul class="dot">
+          <li>日本語の語順が英語の語順に合っているかを確認してください。</li>
+          <li>意味の塊（チャンク）ごとに、少し長めの日本語訳を作成してください。</li>
+        </ul>
+      </div>
+      <h3 class="h3_04">5. 虫食い英訳 レベル1 </h3>
+      <img src="../../assets/img/column_04/Illustration_9.png" alt="">
+      <p class="p_04">英語フレーズの一部を空欄にし、日本語訳をヒントにしながら、スムーズに言えるまで音読しましょう。<br>この練習では、意味を意識しながらフレーズの型を定着させていくことがポイントです</p>
+      <p class="p_04">今回隠している語句の一覧は、チャットの下部に記載していますので、必要に応じてご確認ください</p>
+      <div class="txt_box">
+        <p>上記の自己紹介文を、以下のルールで一部の英語の語句のみ (　　　) で非表示にしてください。</p>
+        <p class="top_margin txt_bold">■ルール：</p>
+        <ul class="dot">
+          <li>非表示にする語句は、英語学習者が混乱しやすいコロケーションや表現、または難易度が高い語句を選んでください。</li>
+          <li>日本語はそのまま表示します。</li>
+          <li>英文と日本文を1文ずつ表示します。</li>
+          <li>最後に隠した英語の語句をまとめて表示し、復習しやすくしてください。</li>
+        </ul>
+        <p class="top_margin">例：</p>
+        <p>こんにちは / 私はヤスです / 株式会社The Pastからきました</p>
+        <p>Hi, I’m (　　　) from (　　　) .</p>
+      </div>
+      <img src="../../assets/img/column_04/5.png" alt="">
+      <h3 class="h3_04">6.虫食い英訳 レベル2</h3>
+      <p class="p_04">難易度を上げて、空欄の数を増やした状態で、つまずかずに言えるまで音読練習を行いましょう。</p>
+      <p class="p_04">（　　　）部分は、「interested (in)」のような、よく使われる語句のペアを中心に選んでいます。</p>
+      <p class="p_04">これらを瞬時に補えるようになることで、仮に”in”のような機能語が聞き取れなくても、文の構造から意味を推測する力が養われていきます。</p>
+      <div class="txt_box">
+        <p>1文あたりの（　　　）で非表示にする語句を増やし、難易度を上げてください。<br>
+          また、最後に隠した英語の語句をすべてまとめて表示し、復習しやすくしてください。</p>
+      </div>
+      <img src="../../assets/img/column_04/6.png" alt="chatgpt">
+      <p class="txt_mark">※ 1番あたりの（　　　）の数が増えている。</p>
+      <h3 class="h3_04">7.虫食い英訳 レベル3</h3>
+      <p class="p_04">英文を全て隠し、 最終テストの準備をします。<br>
+        日本語訳だけを手がかりに、スムーズに英語が口から出てくるまで音読練習しましょう。</p>
+      <div class="txt_box">
+        <p>あなたは英語講師です。日本語訳のみを表示し、その後に私が入力する英文が先程の英語の自己紹介と一致しているかを確認してください。もし相違があれば、指摘した上で、正しい自己紹介文を最後に表示してください。</p>
+      </div>
+      <img src="../../assets/img/column_04/7.png" alt="">
+      <h3 class="h3_04">8. 入力</h3>
+      <p class="p_04">スムーズに暗唱できるレベルまで音読練習ができたかを確認するために、ChatGPTの音声入力機能を使って自己紹介を話してみましょう。<br>
+        日本語訳を参考にしながら、先ほど練習した内容を英語で声に出してみてください。
+        </p>
+      <p class="p_04">チャットボックスにあるマイクのアイコンをタップ／クリックすると、音声入力が始まります。</p>
+      <p class="p_04">英語のリズムに自信がない方も、AIにどのようにじぶんの発音が理解されるのか、弱点発見のいい機会です。</p>
+      <img src="../../assets/img/column_04/8.png" alt="chatgpt">
+      <img src="../../assets/img/column_04/8.1.png" alt="chatgpt">
+      <img src="../../assets/img/column_04/8.2.png" alt="chatgpt">
+      <p class="p_04">上記のように発音に対するフィードバックが得られるため、次のステップにもつなげやすくなります。</p>
+      <h3 class="h3_04">9.音声化・音読練習</h3>
+      <img src="../../assets/img/column_04/9..png" alt="">
+      <p class="txt_mark">ここで少しChatGPTから離れて、音読練習にフォーカスしていきます。</p>
+      <p class="p_04">入力した文字を音声化してくれる、Text to Speech(以下、TTS)は英語学習には欠かせません。</p>
+      <p class="p_04">中でもおすすめなの<span>Narakeet</span>。音声の自然さが高く、しかも音源のダウンロードまで無料で使える優れたTTSツールです。</p>
+      <p class="p_04">使い方はシンプルです。<br>
+        Webサイトにアクセスし、スクリプト欄に先ほど作成した自己紹介文を貼り付けて、画面右下の「Create Audio」をクリックするだけ。<br>
+        しばらく待つと音声が生成されるので、音声ファイルをダウンロードして練習に使いましょう。
+        </p>
+      <p class="p_04"><span class="txt_bold">音読練習のポイント</span><br>
+        音読では、英語のリズムやイントネーションを正確に再現することを意識しながら、2つの練習方法を組み合わせるのが効果的です。
+        </p>
+      <p class="p_04">目標は、スムーズかつ安定した発話ができる状態をつくることです。</p>
+      <p class="p_04"><span class="txt_bold">① オーバーラッピング（Overlapping）</span><br>
+        英語音声と同じスピード・リズムで、スクリプトを見ながら同時に発話する練習です。<br>
+        この方法を繰り返すことで、日本語のリズムで話していた英語が、自然な英語らしいテンポや抑揚に整っていきます。
+        </p>
+      <p class="p_04">音声が速く感じる場合は、0.5〜0.7倍速に調整して練習しましょう。<br>
+        再生速度の調整には、速度変更ができる<span>こちら</span>を使うのがおすすめです。</p>
+      <p class="p_04"><span class="txt_bold">② リッスン・アンド・リピート（Listen and Repeat）</span><br>
+        音声を一度聞いてから、スクリプトを見ずに同じ英文を自分で繰り返す練習です。<br>
+        聞いた音を正確に再現する力を養うと同時に、英語表現が自然な形で定着していきます。
+        </p>
+      <p class="p_04">これらの練習を重ね、ネイティブに近いリズムでスムーズに話せるようになればゴールです。
+        焦らず着実に、自分の声とリズムに意識を向けながら進めていきましょう。<br>
+        </p>
+      <h3 class="h3_04">10. 発展形</h3>
+      <img src="../../assets/img/column_04/Illustration_11.png" alt="">
+      <p class="p_04">音読練習が十分にできたら、以下のような応用的な使い方を取り入れることで、さらにスピーキング力を高めることができます。</p>
+      <p class="txt_bold">想定問答</p>
+      <div class="txt_box_2">
+        <p class="txt_bold"> 先程の自己紹介に対して、 想定される 相手からの質問を英語(日本語訳付き)で表示しなさい。</p>
+      </div>
+      <img src="../../assets/img/column_04/10.png" alt="chatgpt">
+      <p class="p_04">ロールプレイ</p>
+      <div class="txt_box_2">
+        <p class="txt_bold"> 先程の自己紹介に対して、 想定される 相手からの質問を英語(日本語訳付き)で表示しなさい。</p>
+      </div>
+      <img src="../../assets/img/column_04/10.1.png" alt="chatgpt">
+      <p class="p_04">※2025年3月27日現在、Chat GPTは音声技能に対するフィードバック能力は高くないため、それ以外の使い方の方が良いでしょう。</p>
+      <h3 class="h3_04">まとめ</h3>
+      <img src="../../assets/img/column_04/Illustration_10.gif" alt="">
+      <p class="p_04">英語を話せるようになるためには、「概念化」「文章化」「音声化」という3つのプロセスをバランスよく鍛えることが大切です。</p>
+      <p class="p_04">本記事では、ChatGPTを活用しながら、一部をAIに任せつつ、代替が難しい「音声化」や「文章化」の力を、効率的かつ実践的に伸ばしていく方法をご紹介しました。</p>
+      <p class="p_04">大事なのは、完璧を目指すことではなく、自分のつまずいているポイントに気づき、一歩ずつ前進していくことです。</p>
+      <p class="p_04">AIを活用すれば、一人でも学べる環境が整います。まずは自己紹介のような基本表現から始め、自分の言葉で思いを伝えられる英語を育てていきましょう。</p>
+      <p class="p_04">また、記事内で紹介した音読練習は、聞こえた英文を記憶し、口に出すプロセスを含んでおり、VERSANTのPart B（復唱）やPart C（会話に関する質問）、Part D（文章に関する質問）といったセクションにも直結します。短期記憶の中に意味を保持し、それを英語として表現する力が問われるこれらのパートでは、日々の音声化練習が確かな土台となります。こうした力は、実務の英会話でもすぐに役立つスキルです。</p>
+      <p class="p_04">ぜひ、この記事で紹介した方法をあなたの学習に取り入れてみてください。</p>
     </div>
          
   </article>
